# text-rgnn

./: .gitignore  LICENSE  README.md  ablation.py  exp.py  experiments.py  genarator.py  generate_constants.py  generator.py  main.py  me_gcn.ipynb  me_gcn_main.py  pyproject.toml  sweep.py  sweep_for_percentage.py  sweep_params.yaml  sweep_params2.yaml  table_gen.py  test_graph_dataset.py  utils.py
me_gcn_src/: clean.py  embeddings.py  engine.py  generate_adj.py  model.py  utils.py
src/: __init__.py  configurations.py  constants.py  dataset.py  engine.py  generate_constants.py  graph_dataset.py  graph_dataset_utils.py  graph_generators.py  hetero_generator.py  models.py  preprocess.py  text_dataset.py  utils.py  w2vec.py  w2vec_trainer.py
text_rgnn_new/: __init__.py  __main__.py  datamodule.py  models.py  sweep.py  trainer.py  utils.py
text_rgnn_new/embedding_generators/: knn.py  loader.py  tf_idf.py  w2vec.py
