[tool.poetry]
name = "text-rgcn"
version = "0.1.0"
description = ""
authors = ["Arda Can Aras <ardaaras99@gmail.com>"]
readme = "README.md"
packages = [{ include = "mha_based_fsgnn" }]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
transformers = "4.18.0"
jupyter = "^1.0.0"
numpy = "^1.19.2"
scikit-learn = "^1.2.0"
pandas = "^1.5.2"
scipy = "^1.10.0"
torch = "2.0.0"
gensim = "^4.3.2"
torch-geometric = "^2.3.1"
wandb = "^0.15.12"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
ipykernel = "^6.13.0"
pytest = "^7.1.2"
poethepoet = "^0.13.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
