[tool.poetry]
name = "text-rgcn"
version = "0.1.0"
description = ""
authors = ["Arda Can Aras <ardaaras99@gmail.com>"]
readme = "README.md"
packages = [{ include = "mha_based_fsgnn" }]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
transformers = "4.18.0"
jupyter = "^1.0.0"
numpy = "^1.19.2"
scikit-learn = "^1.2.0"
pandas = "^1.5.2"
scipy = "^1.10.0"
torch = "2.0.0"
gensim = "^4.3.2"
torch-geometric = "^2.3.1"
wandb = "^0.15.12"
nltk = "^3.8.1"
openpyxl = "^3.1.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"
ruff = "^0.1.9"
mypy = "^1.8.0"

[tool.ruff]
line-length = 250

[tool.ruff.format]
# Like Black
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
extend-select = [
    "A",  # flake8-builtins
    "B",  # flake8-bugbear
    "S",  # flake8-bandit
    "I",  # isort
    "UP", # pyupgrade
]

[tool.ruff.lint.extend-per-file-ignores]
"*" = ["S101", "S301", "S311"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
